syntax = "proto3";

package authorization_code;

import "client.proto";

message AuthorizationCode {
  string id = 1;
  string client_id = 2;
  string code = 3;
  string code_challenge = 4;
  string code_challenge_method = 5;
  string redirect_uri = 6;
  string expires_in = 7;
  string created_at = 8;
  string updated_at = 9;
  client.Client client = 10;
}

message AuthorizationCodeList {
  repeated AuthorizationCode authorization_code = 1;
}
